<resources>
    <string name="app_name">Pomodoro</string>
    <string name="cst_work_rounds">Work rounds : </string>
    <string name="cst_break_rounds">Break rounds : </string>
    <string name="btn1_txt">Start</string>

    <dimen name="basicMargin">15dp</dimen>
    <dimen name="TvBoxTextSize">35sp</dimen>
    <!-- Preference Titles -->
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="settings">Settings</string>
    <string name="nombreSession">Nombre de session</string>
    <string name="switchPerso">switchPerso</string>
    <string name="seances">Séances</string>
    <string name="retour">Retour</string>
    <string name="seance_personnalisee">Séance Personnalisée :</string>
    <string name="_00">00</string>
    <string name="deuxpoint">:</string>
    <string name="minutes">00</string>
    <string name="todo">TODO</string>
</resources>