<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/holderItem1"
        style="@style/HolderBox"
        android:layout_width="300dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/workRounds"
            style="@style/Text_InBox"
            android:text="@string/cst_work_rounds"
            app:layout_constraintStart_toStartOf="@+id/holderItem1"
            app:layout_constraintTop_toTopOf="@id/holderItem1"
            android:textSize="30sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/holderBox2"
        style="@style/HolderBox"
        android:layout_width="300dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/holderItem1">

        <TextView
            android:id="@+id/breakRounds"
            style="@style/Text_InBox"
            android:text="@string/cst_break_rounds"
            app:layout_constraintStart_toStartOf="@+id/holderBox2"
            app:layout_constraintTop_toTopOf="@id/holderBox2"
            android:textSize="30sp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="350dp"
        android:layout_height="450dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/holderBox2">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/pomodorobackground" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/clockMinutes"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="200dp"
                android:background="@drawable/rounded_clock_bckgrd"
                android:gravity="center"
                android:text="@string/minutes"
                android:textSize="80sp"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/dospuntos"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="125dp"
                android:layout_marginTop="200dp"
                android:gravity="center"
                android:text="@string/deuxpoint"
                android:textSize="80sp"
                android:textStyle="bold"

                />

            <TextView
                android:id="@+id/clockSeconds"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="200dp"
                android:background="@drawable/rounded_clock_bckgrd"
                android:gravity="center"
                android:text="@string/_00"
                android:textSize="80sp"
                android:textStyle="bold"

                />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/restartbutton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="330dp"
                android:background="#00FFFFFF"
                android:src="@drawable/ic_restart"

                />

        </RelativeLayout>

    </FrameLayout>

    <Button
        android:id="@+id/buttonStart"
        style="@style/HolderBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:text="@string/btn1_txt"
        android:textColor="@color/white"
        android:textSize="@dimen/TvBoxTextSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>
